welcome.lessons.welcome.array.search.IndexOfValue.scala.error
indexOfValue:3: error: not found: value num
  {if (num[i]==lookingFor)
       ^indexOfValue:3: error: not found: type i
  {if (num[i]==lookingFor)
           ^indexOfValue:2: error: type mismatch;
 found   : Unit
 required: Int
  for (i <- 0 to nums.length-1)
         ^